# server-sdk-rust

./: .gitmodules  Cargo.toml  Makefile  README.md  grcov.yml
.github/workflows/: build-with-coverage.yml  build.yml  rust.yml
benches/: bench.rs
examples/: demo.rs
resources/fixtures/: repo.json  segments.json  toggles.json
src/: config.rs  core.rs  evaluate.rs  evalutate.rs  feature_probe.rs  lib.rs  sync.rs  user.rs
tests/: integration_test.rs
