[package]
edition = "2021"
name = "feature-probe-server-sdk"
version = "2.1.0"
license = "Apache-2.0"
authors = ["maintain@featureprobe.com"]
description = "FeatureProbe Server Side SDK for Rust"

[lib]
name = "feature_probe_server_sdk"
path = "src/lib.rs"

[[bench]]
name = "bench"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["realtime"]
internal = []
realtime = ["socketio-rs"]

[dependencies]
anyhow = "1.0"
byteorder = "1"
dashmap = "5.4"
headers = "0.3"
http = "0.2"
lazy_static = "1.4"
minstant = "0.1"
parking_lot = { version = "0.12", features = ["serde"] }
rand = "0.8"
regex = "1.5.6"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
thiserror = "1.0"
tracing = "0.1"
url = "2"

feature-probe-event = { version = "1.1.3", features = [
  "use_tokio",
], default-features = false}

reqwest = { version = "0.11", default-features = false, features = [
  "rustls-tls",
  "json",
] }
tokio = { version = "1", features = ["full"] }

socketio-rs = { optional = true, version = "0.1.7", default-features = false, features = ["client"] }
futures-util = { version = "0.3", default-features = false, features = [
  "sink",
] }

[dev-dependencies]
approx = "0.5"
axum = { version = "0.6", features = ["headers"] }
axum-extra = { version = "0.4", features = ["typed-routing"] }
clap = { version = "4.0.29", features = ["derive"] }
criterion = "0.4"
rusty-hook = "^0.11.2"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
feature-probe-server = { version = "2.0.1", features = ["realtime"] }

